[package]
name = "mostr"
description = "A nested task chat, powered by nostr."
repository  = "https://forge.ftt.gmbh/janek/mostr"
readme = "README.md"
license = "GPL 3.0"
authors = ["melonion"]
version = "0.3.0"
edition = "2021"
default-run = "mostr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.5"
itertools = "0.12"
log = "0.4"
chrono = "0.4"
colog = "1.3"
colored = "2.1"
nostr-sdk = "0.33"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.10.5"
